重構並優化核心功能
使用雙端佇列取代舊式列表操作，以獲得更好的對話效能。刪除了不必要的匯入並調整了 BotCore 建構函數中的異常處理，以獲得更清晰的程式碼。這些變化提高了可維護性和對最佳實踐的遵守。